@@ -214,8 +214,7 @@ static char *get_cookie_param(request_rec *r, const char *name)
 /* Find the worker that has the 'route' defined
  */
 static proxy_worker *find_route_worker(proxy_balancer *balancer,
-                                       const char *route, request_rec *r,
-                                       int recursion)
+                                       const char *route, request_rec *r)
 {
     int i;
     int checking_standby;
@@ -252,15 +251,10 @@ static proxy_worker *find_route_worker(proxy_balancer *balancer,
                          * This enables to safely remove the member from the
                          * balancer. Of course you will need some kind of
                          * session replication between those two remote.
-                         * Also check that we haven't gone thru all the
-                         * balancer members by means of redirects.
-                         * This should avoid redirect cycles.
                          */
-                        if ((*worker->s->redirect)
-                            && (recursion < balancer->workers->nelts)) {
+                        if (*worker->s->redirect) {
                             proxy_worker *rworker = NULL;
-                            rworker = find_route_worker(balancer, worker->s->redirect,
-                                                        r, recursion + 1);
+                            rworker = find_route_worker(balancer, worker->s->redirect, r);
                             /* Check if the redirect worker is usable */
                             if (rworker && !PROXY_WORKER_IS_USABLE(rworker)) {
                                 /*
@@ -323,7 +317,7 @@ static proxy_worker *find_session_route(proxy_balancer *balancer,
         /* We have a route in path or in cookie
          * Find the worker that has this route defined.
          */
-        worker = find_route_worker(balancer, *route, r, 1);
+        worker = find_route_worker(balancer, *route, r);
         if (worker && strcmp(*route, worker->s->route)) {
             /*
              * Notice that the route of the worker chosen is different from
